# Hyper-RAG

./: CLAUDE.md  README.md  README_MCP.md  SETUP_LOCAL_EMBEDDINGS.md  STRUCTURED_OUTPUT_GUIDE.md  fastmcp.json  main.py  mcp_server.py  pyproject.toml
build-hypergraph/: BUILD_DATABASE.md  GEMINI_OPTIMIZATION_GUIDE.md  build_hyperrag_db.py  requirements_builder.txt
hyperrag/: batch_logging.py  hyperrag.py  llm.py  llm_structured_wrapper.py  logging_utils.py  operate.py  operate_structured.py  prompt.py  storage.py  structured_outputs.py
tools/: README.md  backend_chinese.json  find_and_fix_chinese.py  frontend_chinese.json
web-ui/: README.md  docker-compose.yml
web-ui/backend/: file_manager.py  file_processing_logger.py  logging_utils.py  main.py  translations.py  uvicorn_log_config.json
web-ui/frontend/: package.json
web-ui/frontend/src/components/DatabaseSelector/: index.tsx
web-ui/frontend/src/components/NotFound/: index.tsx
web-ui/frontend/src/components/RetrievalInfo/: index.tsx
web-ui/frontend/src/i18n/locales/: en-US.json  zh-CN.json
web-ui/frontend/src/pages/API/: index.tsx
web-ui/frontend/src/pages/Home/: index.tsx
web-ui/frontend/src/pages/Hyper/DB/: index.tsx
web-ui/frontend/src/pages/Hyper/Files/: index.jsx
web-ui/frontend/src/pages/Hyper/Graph/: index.tsx
web-ui/frontend/src/pages/Setting/: index.tsx
web-ui/frontend/src/store/: globalUser.ts
